new web app for wisact284

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ ENV/
 *.log
 *.pot
 *.swp
-settings.py
+djequis/settings/production.py
+djequis/settings/development.py
 wsgi.py
 commonapp_output.sql
