--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,9 @@ python-ldap==3.1.0
 pyodbc==4.0.25
 informixdb==2.5
 bootstrap_admin==0.4.0
+pysftp==0.2.9
+requests==2.21.0
+lxml==4.3.1
+reportlab==3.5.13
+python-dateutil==2.8.0
+smartystreets-python-sdk==4.0.1
