--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-django==1.11.18
+django==1.11.20
 sqlalchemy==0.8.7
 setuptools==40.7.1
 MySQL-python==1.2.5
@@ -13,3 +13,4 @@ lxml==4.3.1
 reportlab==3.5.13
 python-dateutil==2.8.0
 smartystreets-python-sdk==4.0.1
+pytz==2018.9
