--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ reportlab==3.5.13
 python-dateutil==2.8.0
 smartystreets-python-sdk==4.0.1
 pytz==2018.9
-awscli==1.16.137
+awscli==1.16.152
+pycrypto==2.6.1
